fixed app for frontend and backend

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -21,12 +21,12 @@ spec:
         image: "singharunk/flaskfrontend:latest"
         imagePullPolicy: "Always"
         env:
-          - name: NS
+          - name: nspace
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
           - name: SERVICE_X
-            value: "$(NS).svc.cluster.local"
+            value: "$(nspace).svc.cluster.local"
           - name: SERVICE_X_PORT
             value: 6000
         ports:
