--- a/canary_ingress.yaml
+++ b/canary_ingress.yaml
@@ -62,7 +62,7 @@ metadata:
   name: flaskvirtualservice
 spec:
   hosts:
-  - flaskfrontend.default.svc.cluster.local # destination hosts to which traffic is being sent. The hosts field applies to both HTTP and TCP services
+  - "flask.example.com" # destination hosts to which traffic is being sent. The hosts field applies to both HTTP and TCP services
   gateways:
   - flask-gateway
   http:
